# rag-studies

./: .bandit  .env.example  .gitignore  CHANGELOG.md  README.md  config.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
.github/: README.md
.github/workflows/: ci.yml  security-pipeline.yml
.zap/: rules.tsv
apps/: README.md
apps/code-analyzer/: README.md  config.example.json  main.py  requirements.txt
apps/code-review-demo/: README.md  example.py  main.py  output_formatter.py  requirements.txt
apps/interactive-chat/: README.md  chat_interface.py  code_assistant.py  colored_output.py  main.py  requirements.txt  search_engine.py
docs/: README.md  architecture.md  rag-concepts.md
scripts/: README.md  create_app.py  list_apps.py  remove_app.py
src/capacities/: __init__.py  base.py
src/capacities/code_review/: __init__.py  prompts.py  reviewer.py
src/core/: engine.py
src/helpers/: __init__.py  colored_output.py
src/llms/: __init__.py  base.py  gemini_llm.py  ollama_llm.py
src/loaders/: __init__.py  base.py  py_loader.py
src/vector_stores/: __init__.py  base.py  chroma_store.py
tests/: __init__.py  conftest.py
tests/capacities/: test_code_review.py
tests/core/: test_engine.py
tests/helpers/: test_colored_output.py
tests/llms/: test_ollama_llm.py
